--- a/pakey2/package.json
+++ b/pakey2/package.json
@@ -13,6 +13,9 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-fs": "^2.10.14",
+    "react-native-permissions": "^1.1.1",
+    "react-native-photo-upload": "^1.2.0",
     "react-navigation": "^2.10.0"
   }
 }
