--- a/pakey2/package.json
+++ b/pakey2/package.json
@@ -16,6 +16,7 @@
     "react-native-fs": "^2.10.14",
     "react-native-permissions": "^1.1.1",
     "react-native-photo-upload": "^1.2.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.10.0"
   }
 }
